# aoc2025

./: pyproject.toml
day1/: main.py
src/aoc2025/: __init__.py  shared.py
src/aoc2025/day01/: main.py
src/aoc2025/day02/: main.py
src/aoc2025/day03/: main.py  part1
src/aoc2025/day04/: main.py
src/aoc2025/day05/: main.py  test2
src/aoc2025/day06/: main.py
src/aoc2025/day07/: input1  main.py
