[project]
name = "aoc2025"
version = "0.1.0"
description = "advent of code 2025"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
day1 = "aoc2025.day01.main:main"
day2 = "aoc2025.day02.main:main"
all = "aoc2025:main"
