[project]
name = "aoc2025"
version = "0.1.0"
description = "advent of code 2025"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
day1 = "aoc2025.day01.main:main"
day2 = "aoc2025.day02.main:main"
day3 = "aoc2025.day03.main:main"
day4 = "aoc2025.day04.main:main"
day5 = "aoc2025.day05.main:main"
day6 = "aoc2025.day06.main:main"
day7 = "aoc2025.day07.main:main"
all = "aoc2025:main"
